Tue Feb 26 19:32:42 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtk[hv]vscale.c (gtk_[hv]scale_expose): Chain
	up before drawing the scale values so that the number
	is drawn in the right place instead of one step 
	back. (#61743, patch from Satyajit Kanungo)

Tue Feb 26 19:16:28 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/win32/gdkkeys-win32.c (gdk_keyval_name): 
	* gdk/x11/gdkkeys-x11.c (gdk_keyval_name): 
	Make sure Page_Up, Page_Down get those names, not Prior,
	Next.

Tue Feb 26 18:58:49 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccelgroup.c (gtk_accelerator_set_default_mod_mask):
	OR in the three default modifiers to any value passed
	in by the caller, so that the caller won't break the
	the default bindings. (#70142, Jody Goldberg, though he
	wasn't in favor of this particular way of solving it.)

Tue Feb 26 18:47:44 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_add_mnemonic): Append
	mnemonics rather than prepending them so that the 
	order is typically forward rather than typically
	backward. (Partial fix for #52395)

Wed Feb 27 00:45:39 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkarrow.c, gtk/gtkmenuitem.c, gtk/gtkrange.c
	gtk/gtkspinbutton.c gtk/gtkstyle.c: Draw arrows better (without
	extra baseline)

Tue Feb 26 18:38:17 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccellabel.c (gtk_accel_label_refetch): 
	Display any "g_unicode_isgraph()" char literally,
	not just latin1. (#65679)

Tue Feb 26 18:01:10 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_grab_focus): Don't
	focus insensitive widgets. (#68203)
	
	* gtk/gtkentry.c (gtk_entry_state_changed): Clear any
	current selection if we become insensitive. (#68203)

	* gtk/gtkentry.c (gtk_entry_grab_focus): Don't
	select the text if the entry isn't editable. (#67203)

	* gtk/gtkentry.c: Activate keybindings when not editable,
	but supress keybindings that change the text. (#65848, #68203)
